# My_Linux_Course_Demo

./: .gitignore  README.md  do_somthing.sh  heap_overflow.c
1-Variable_and_Data_Types/: Makefile  README.md  main.c  main.h
1-Variable_and_Data_Types/actuator/: LED_Controller.c  LED_Controller.h  LED_controller.c  LED_controller.h  led_controller.c  led_controller.h  pumpController.c  pumpController.h  pump_controller.c  (+1 more)
10-Process/: Makefile  README.md  main  main.c
11-Thread/: Makefile  REAME.md  main1.c  main2.c  main3.c
12-IPC/: REAME.md
13-Character_Device/: Makefile  README.md  hello_lkm.c  my_character_device.c
2-Standard_IO/: Makefile  README.md  logger.c  logger.h  main.c
3-Operator_and_Control_Structures/: Makefile  REDME.md  led_driver.c  led_driver.h  main.c
4-Design_Patern/: Makefile
4-Design_Patern/Behavioral-State_Machine/: CMakeLists.txt  Makefile  README.md  main.c
4-Design_Patern/Behavioral-State_Machine/inc/: music_player.h  player_state.h
4-Design_Patern/Behavioral-State_Machine/inc/states/: buffering_state.h  paused_state.h  playing_state.h  stopped_state.h
4-Design_Patern/Behavioral-State_Machine/src/: music_player.c
4-Design_Patern/Behavioral-State_Machine/src/states/: buffering_state.c  paused_state.c  playing_state.c  stopped_state.c
5-Memory_Management/: Makefile  README.md  memory_lab.c
6-Array_and_Pointer/: Makefile  README.md  history_logger.c  history_logger.h  main1.c  main2.c
7-File_System/: Makefile  filestat.c
8-General/: Makefile  README.md  main.c
9-File_System/: README.md
Markdown_Notes/: README.md
(+124 files in other folders)
